--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python: 2.7
 install:
   - pip install .
   - pip install -r requirements.txt
+  - pip install coveralls
 
 # command to run tests
-script: python test/test_constraint.py
+script: nosetest
