--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,4 @@ Flask-SQLAlchemy>=1.0
 nose==1.3.4
 sphinx==1.3.1
 sphinx-autobuild==0.5.2
-validate_email==1.3
-pyDNS==2.3.6
-py3DNS==3.1.0
+email_validator==1.0
