--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,15 @@ install:
   - pip install -r requirements.txt
   - pip install coveralls
 
+# coveralls
+service_name: travis-pro
+repo_token: 3HHKgnpaX6qT41o42B3vTld39dHYVjzuZ
+
 # command to run tests
 script: nosetests
+
+script:
+  coverage run --source flask_validator setup.py test
+after_success:
+  coveralls
+
