--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ python:
   - "3.6"
   - "3.7"
   - "3.8"
-  - "3.9"
+  - "3.8-dev"  # 3.8 development branch
+  - "nightly"  # nightly build
   - "pypy"
 
 # command to install dependencies
